Fix logo sizing on mobile

--- a/assets/stylesheets/application.css
+++ b/assets/stylesheets/application.css
@@ -9799,6 +9799,7 @@ article {
 
 .logo {
   max-height: 120px;
+  object-fit: contain !important;
   width: auto !important; }
 
 .flex {
